# pyci

./: .gitignore  .gitlab-ci.yml  .pre-commit-ci.yaml  .pre-commit-config.yaml  README.md  makefile  pyproject.toml
