[tool.poetry]
name = "belib-data-platform"
license = "Proprietary"
version = "0.1.0"
description = "A project that aims to deploy an Azure Data Platform using Bélib Open-Source Datas"
authors = ["Charles K. <cakotto@ippon.fr>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "3.11.10"
requests = "^2.32.3"
azure-functions = "^1.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.6.8"
mypy = "^1.11.2"
types-requests = "^2.32.0.20240914"
pre-commit = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    ".pytest_cache",
    "__pycache__",
]
fix = false
required-version = ">=0.6.8"
line-length = 100
indent-width = 4
output-format = "concise"

[tool.ruff.lint]
select = [
        "E4",
        "E5",
        "E7",
        "F",
        "UP",
        "D",
        "N",
        "S",
        "B",
        "PT",
        "RUF005",
        "RUF019",
        "PLR1711",
        "PLR1722",
        "PLR1730",
        "PLR2044",
        "PLR5501",
        "ARG"
        ]
ignore = ["S101", "D300", "D206"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "D104"]
"test_dependencies.py" = ["D103", "D100"]
"dependencies.py" = ["D100"]
"function_app.py" = ["N803"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
lines-after-imports = 2
length-sort-straight = true
length-sort = true
no-sections = true

[tool.ruff.format]
exclude = ["__init__.py"]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"
